# smart-car-advisor

./: .gitignore  CLAUDE.md  PROGRESS.md  README.md
apps/api/: .env.example  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: e3b118921749_create_initial_schema.py
apps/api/src/app/: main.py
apps/api/src/app/controllers/: car_recommendation_controller.py
apps/api/src/app/core/: database.py  exceptions.py  response.py
apps/api/src/app/models/: __init__.py  car_model.py  car_variant.py  feature.py  maker.py  review.py  variant_feature.py  variant_specification.py
apps/api/src/app/repositories/: car_recommendation_repository.py
apps/api/src/app/routes/: car_recommendation_routes.py
apps/api/src/app/schemas/: car_recommendation_schemas.py
apps/api/src/app/seed/: generators.py  run_seed.py  upsert_utils.py
apps/api/src/app/seed_data/: features.py  makers_and_models.py  review_templates.py
apps/api/src/app/services/: car_recommendation_explanations.py  car_recommendation_scoring.py  car_recommendation_service.py
apps/api/tests/: conftest.py
apps/api/tests/services/: factories.py  test_car_recommendation_explanations.py  test_car_recommendation_scoring.py  test_car_recommendation_service.py
apps/web/: eslint.config.mjs  package-lock.json  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/questionnaire/: page.tsx
apps/web/lib/: answers-convert.ts  answers-storage.ts  api-client.ts  format.ts  questionnaire-options.ts  recommendations-api.ts  types.ts
apps/web/types/: api.ts
(+11 files in other folders)
